# geo-busyness

./: .dockerignore  .gitignore  Dockerfile  README.md  debug_mlflow.py  main.py  pyproject.toml  test_api.py  test_api_gateway_model_endpoint.py
.github/workflows/: ci.yml  sagemaker-pipeline.yml
notebook/: ML Eng 03 - Project notebook.ipynb
pipelines/: approve_model.py  build_ecr.py  deploy_model.py  sagemaker_pipeline.py  upload_config.py
src/: inference.py  model_inference.py  requirements.txt  serve  serve.py
src/config/: config.yaml
src/core/: constants.py  data_ingestion.py  feature_engineering.py  model_training.py  validation.py
src/inference/: model_inference.py  serve.py
src/pipelines/: evaluate.py  sagemaker_processing.py  sagemaker_training.py
tests/: conftest.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_data_ingestion.py  test_feature_engineering.py  test_model_training.py
