[project]
name = "geo-busyness"
version = "0.1.0"
description = "This application predicts geographic busyness levels for delivery optimization. It uses machine learning to analyze courier movements and restaurant data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "h3",
    "joblib",
    "boto3",
    "pyyaml",
    "mlflow",
    "sagemaker-mlflow",
    "requests-auth-aws-sigv4",
    "sagemaker==2.255.0",
    "python-dotenv",
    "pytest>=9.0.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
